--- a/.gitignore
+++ b/.gitignore
@@ -10,12 +10,13 @@
 /data/config/efloodip.php
 /data/config/banip.php
 /data/config/admin_config.php
-/data/logs/data_logs/
-/data/logs/dump_backup/
-/data/logs/error_logs/
-/data/logs/ip_logs/
-/data/logs/ref_logs/
-/data/logs/voting_logs/
+/data/logs/data_logs/*.log
+/data/logs/dump_backup/*.sql.gz
+/data/logs/error_logs/*.log
+/data/logs/error_logs/tmp/*.log
+/data/logs/ip_logs/*.log
+/data/logs/ref_logs/*.log
+/data/logs/voting_logs/*.log
 /data/tmp/*
 /uploads/logo_*
 /assets/logo_*
